--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -21,20 +21,22 @@
         android:layout_marginTop="16dp"/>
 
     <EditText
-        android:id="@+id/dateEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Date (YYYY-MM-DD)"
-        android:textSize="14sp"
-        android:layout_marginTop="16dp"/>
-
-    <EditText
         android:id="@+id/weatherEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Weather"
         android:textSize="14sp"
-        android:layout_marginTop="16dp"/> <!-- 新增天气信息输入框 -->
+        android:layout_marginTop="16dp"/>
+
+    <EditText
+        android:id="@+id/dateTimeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Date and Time"
+        android:textSize="14sp"
+        android:layout_marginTop="16dp"
+        android:focusable="false"
+        android:clickable="true"/>
 
     <ImageView
         android:id="@+id/selectedImageView"
