--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -38,6 +38,13 @@
         android:focusable="false"
         android:clickable="true"/>
 
+    <Button
+        android:id="@+id/getLocationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Location"
+        android:layout_marginTop="16dp"/>
+
     <ImageView
         android:id="@+id/selectedImageView"
         android:layout_width="match_parent"
