--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -61,7 +61,11 @@
             android:layout_height="wrap_content"
             android:text="Select Image"
             android:layout_marginTop="16dp" />
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:text="drag the red point to record location"/>
         <Button
             android:id="@+id/recordLocationButton"
             android:layout_width="wrap_content"
