--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -44,15 +44,15 @@
 
         <ImageView
             android:id="@+id/selectedImageView"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
             android:layout_marginTop="16dp" />
 
         <FrameLayout
             android:id="@+id/map_container"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"/>
+            android:layout_height="150dp"/>
 
 
         <Button
