--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -54,6 +54,11 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
 
         <Button
             android:id="@+id/selectImageButton"
@@ -68,6 +73,9 @@
             android:layout_height="wrap_content"
             android:text="Take Photo"
             android:layout_marginTop="16dp" />
+
+    </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
