change to a meaningful app icon

--- a/app/src/main/res/layout/activity_write_new_diary.xml
+++ b/app/src/main/res/layout/activity_write_new_diary.xml
@@ -85,14 +85,13 @@
             android:id="@+id/recordLocationButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Record Location"
-            android:layout_marginTop="16dp" />
+            android:text="Record Location" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:layout_marginTop="16dp" />
+            android:layout_marginTop="16dp"
+            android:text="Save" />
     </LinearLayout>
 </ScrollView>
